[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.2",
]

[project]
name = "pinned-import-linter"
version = "1.0.1"
description = "A plugin for python that will help you standardize imports from any libraries."
license = { text = "MIT LICENSE" }
authors = [
    { name = "Danil Gubanov", email = "20949800+maintainer64@users.noreply.github.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Utilities",
]
dynamic = [
  "readme",
]
dependencies = [
]
urls.Source-code = "https://github.com/maintainer64/pinned-import-linter/"
scripts.lint-pinned-imports = "pinnedimportlinter.cli:main"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
pinnedimportlinter = [
    "py.typed",
]

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.setuptools.dynamic]
readme = { file = "README.rst" }

[tool.black]
line-length = 99

[tool.isort]
add_imports = [
    "from __future__ import annotations",
]
force_single_line = true
profile = "black"
line_length = 99

[tool.mypy]
namespace_packages = false
show_error_codes = true
show_column_numbers = true
strict = true
exclude = [
    '^tests/assets/',
]
warn_unreachable = true
